--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           node-version: 16  # Adjust the version to your project's requirements
       
- ##     - name: Install Dependencies
- ##       run: install nodejs
+      - name: Install Dependencies
+        run: install nodejs
         
       - name: Install Dependencies
         run: npm install
